--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     >
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tool_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        />
     <com.github.mikephil.charting.charts.LineCircleChart
         android:id="@+id/chart_main"
         android:layout_width="300dp"
